lib/tests/fixtures/compiler/parser/func_default_value_assignment.baseline
Error: func_default_value_assignment.pp:1:23: assignment expressions are not allowed in parameter default values.
  function bad($param = $wrong = 1) {
                        ^~~~~~~~~~
