lib/tests/fixtures/compiler/parser/func_default_value_assignment.pp
function bad($param = $wrong = 1) {

}

bad()
